--- a/src/css/home.css
+++ b/src/css/home.css
@@ -20,11 +20,11 @@ h1 {
 .box1 {
     width: 100%;
     height: 500px;
-    background: url("../res/images/top.png");
+    background: url("../static/res/images/top.png") center;
 }
 
 .box2 {
     width: 100%;
     height: 1000px;
-    background: url("../res/images/alert.png");
+    background: url("../static/res/images/alert.png") center;
 }
